Mon Dec 20 20:58:26 UTC 2010  Olli Savia  <ops@iki.fi>

        * examples/QOS/Change_Receiver_FlowSpec/Sender_QoS_Event_Handler.cpp:
        * examples/QOS/Change_Sender_TSpec/Sender_QoS_Event_Handler.cpp:
        * examples/QOS/Simple/Sender_QoS_Event_Handler.cpp:
          Fixed compile warnings.

Fri Dec 17 14:42:53 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * */*.*:
          Merged RemedyWork branch.

Wed Dec 15 11:32:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Initialize pointer with zero

Tue Dec 14 15:26:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * etc/index.html:
          Updated for next release

Tue Dec 14 13:13:17 CET 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.0 released.

Tue Dec 14 10:12:53 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
        * tests/Auto_IncDec_Test.cpp:
        * tests/Buffer_Stream_Test.cpp:
        * tests/Bug_2434_Regression_Test.cpp:
        * tests/Bug_3332_Regression_Test.cpp:
        * tests/Bug_3878_Regression_Test.cpp:
        * tests/CDR_Array_Test.cpp:
        * tests/CDR_Test.cpp:
        * tests/Cache_Map_Manager_Test.cpp:
        * tests/Collection_Test.cpp:
        * tests/Conn_Test.cpp:
        * tests/Dev_Poll_Reactor_Test.cpp:
        * tests/Dynamic_Priority_Test.cpp:
        * tests/Dynamic_Test.cpp:
        * tests/Future_Set_Test.cpp:
        * tests/Future_Test.cpp:
        * tests/IOStream_Test.cpp:
        * tests/Integer_Truncate_Test.cpp:
        * tests/Intrusive_Auto_Ptr_Test.cpp:
        * tests/MM_Shared_Memory_Test.cpp:
        * tests/MT_Reference_Counted_Event_Handler_Test.cpp:
        * tests/MT_Reference_Counted_Notify_Test.cpp:
        * tests/MT_SOCK_Test.cpp:
        * tests/Mem_Map_Test.cpp:
        * tests/Message_Queue_Notifications_Test.cpp: